<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@color/Black"
            android:text="@string/securekeyboard"
            />
        <TextView
            android:id="@+id/tvDigit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/digit"
            android:padding="10dp"
            android:textColor="@color/GrayLight"
            />
        <TextView
            android:id="@+id/tvLetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/letter"
            android:padding="10dp"
            android:textColor="@color/GrayLight"
            />
        <TextView
            android:id="@+id/tvSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symbol"
            android:padding="10dp"
            android:textColor="@color/GrayLight"
            />
        <Button
            android:id="@+id/btnOK"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@drawable/blue_button_selector"
            android:textColor="@color/white"
            android:layout_margin="2dp"
            android:textSize="@dimen/SmallTextSize"
            android:text="@string/yes"
            />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="200dp">

    </FrameLayout>
</LinearLayout>
