<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btnLetter0"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="q"
            />
        <Button
            android:id="@+id/btnLetter1"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="w"
            />
        <Button
            android:id="@+id/btnLetter2"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="e"
            />
        <Button
            android:id="@+id/btnLetter3"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="r"
            />
        <Button
            android:id="@+id/btnLetter4"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="t"
            />
        <Button
            android:id="@+id/btnLetter5"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="y"
            />
        <Button
            android:id="@+id/btnLetter6"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="u"
            />
        <Button
            android:id="@+id/btnLetter7"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="i"
            />
        <Button
            android:id="@+id/btnLetter8"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="o"
            />
        <Button
            android:id="@+id/btnLetter9"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="p"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <Button
            android:id="@+id/btnLetter10"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="a"
            />
        <Button
            android:id="@+id/btnLetter11"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="s"
            />
        <Button
            android:id="@+id/btnLetter12"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="d"
            />
        <Button
            android:id="@+id/btnLetter13"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="f"
            />
        <Button
            android:id="@+id/btnLetter14"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="g"
            />
        <Button
            android:id="@+id/btnLetter15"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="h"
            />
        <Button
            android:id="@+id/btnLetter16"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="j"
            />
        <Button
            android:id="@+id/btnLetter17"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="k"
            />
        <Button
            android:id="@+id/btnLetter18"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="l"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btnConvert"
            android:layout_width="50dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="@string/capital"
            />
        <Button
            android:id="@+id/btnLetter19"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="z"
            />
        <Button
            android:id="@+id/btnLetter20"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="x"
            />
        <Button
            android:id="@+id/btnLetter21"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="c"
            />
        <Button
            android:id="@+id/btnLetter22"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="v"
            />
        <Button
            android:id="@+id/btnLetter23"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="b"
            />
        <Button
            android:id="@+id/btnLetter24"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="n"
            />
        <Button
            android:id="@+id/btnLetter25"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/KeyStyle"
            android:layout_height="wrap_content"
            android:text="m"
            />

        <Button
            android:id="@+id/btnDel"
            android:layout_width="50dp"
            style="@style/KeyStyle"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btnSpace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/KeyStyle"
        android:text="@string/space"
        />
</LinearLayout>
